<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <LinearLayout
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:orientation="vertical"
	    >	    
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        >	
	        <ImageView
	            android:id="@+id/payment_img_photo"
	            android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:background="#dddddd"
	            android:contentDescription="@null"
	            android:padding="1dp"
	            android:scaleType="centerCrop"
	            android:src="#ffffff" 
	            />	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="100dp"
	            android:layout_marginLeft="10dp"
	            android:layout_toRightOf="@+id/payment_img_photo"
	            android:orientation="vertical"
	            android:gravity="center_vertical"
	            >	            
	            <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/payment_lbl_amount" 
		            />
	            
	            <EditText 
	                android:id="@+id/payment_edt_amount"
	                android:layout_height="35dp"
	                android:layout_width="match_parent"
	                android:textSize="16sp"
	                android:inputType="numberDecimal"
	                />
	            
	            <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/payment_lbl_description" 
		            />
	            
	            <EditText 
	                android:id="@+id/payment_edt_description"
	                android:layout_height="35dp"
	                android:layout_width="match_parent"
	                android:textSize="16sp"
	                />	            
	        </LinearLayout>	 
	    </RelativeLayout>

		<CheckBox
			android:id="@+id/payment_cb_cash"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:checked="false"
			android:textSize="16sp"
			android:text="@string/payment_cb_cash"
			/>

	    <CheckBox
	        android:id="@+id/payment_cb_product"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:checked="false"
	        android:textSize="16sp"
	        android:text="@string/payment_cb_product"
	        />
	    
	    <LinearLayout 
	        android:id="@+id/payment_ll_product"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:orientation="vertical"
	        android:visibility="gone"
	        >
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_product_field_1" 
		        />
	        
	        <EditText 
		    	android:id="@+id/payment_edt_product_field_1"
		       	android:layout_height="35dp"
		       	android:layout_width="match_parent"
		       	android:textSize="16sp"
		       />
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_product_field_2" 
		        />
	        
	        <ImageView 
		    	android:id="@+id/payment_img_product_field_2"
		       	android:layout_width="100dp"
	            android:layout_height="100dp"
	            android:background="#dddddd"
	            android:contentDescription="@null"
	            android:padding="1dp"
	            android:scaleType="centerCrop"
	            android:src="#ffffff" 
		       />	        
	    </LinearLayout>
	    
	    <CheckBox 
	        android:id="@+id/payment_cb_regular"
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"	        
	        android:checked="false"
	        android:textSize="16sp"
	        android:text="@string/payment_cb_regular"
	        />

        <CheckBox
            android:id="@+id/payment_cb_auxdata"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:checked="false"
            android:textSize="16sp"
            android:text="@string/payment_cb_auxdata"
            />

        <LinearLayout
	        android:id="@+id/payment_ll_regular"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        android:layout_marginBottom="15dp"
	        android:orientation="vertical"
	        android:visibility="gone"
	        >	   
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/adjust_dlg_lbl_phone" 
		        />
	        
	        <EditText 
		    	android:id="@+id/payment_edt_phone"
		       	android:layout_height="35dp"
		       	android:layout_width="match_parent"
		       	android:textSize="16sp"
		       	android:inputType="phone"
		       />
	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/adjust_dlg_lbl_email" 
		        />
	        
	        <EditText 
		    	android:id="@+id/payment_edt_email"
		       	android:layout_height="35dp"
		       	android:layout_width="match_parent"
		       	android:textSize="16sp"
		       	android:inputType="textEmailAddress"
		       />
	        	        					    	        
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_type" 
		        />
	        
	        <Spinner 
	            android:id="@+id/payment_spn_type"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent"
	            />
	        
	        <CheckBox 
		        android:id="@+id/payment_cb_end_type"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:checked="false"
		        android:textSize="16sp"
		        android:text="@string/payment_cb_end_type"
		        />
	        
	        <TextView
	            android:id="@+id/payment_lbl_start"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_start" 
		        />
	        
	        <DatePicker 
	            android:id="@+id/payment_pkr_start"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:layout_marginTop="2dp"
	            android:layout_marginBottom="2dp"
	            />
	                	        	        	               
	        <TextView
	            android:id="@+id/payment_lbl_end_type"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_end" 
		        />
		    
			<DatePicker 
	            android:id="@+id/payment_pkr_end"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:layout_marginTop="2dp"
	            android:layout_marginBottom="2dp"
	            />
	        
			<EditText 
		    	android:id="@+id/payment_edt_repeat_count"
		       	android:layout_height="35dp"
		       	android:layout_width="match_parent"
		       	android:textSize="16sp"
		       	android:inputType="number"
		       	android:visibility="gone"
		       />
			
			<TextView
        	    android:id="@+id/payment_lbl_quarter_month"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_quarter_month" 
		        />
			
			<Spinner 
	            android:id="@+id/payment_spn_quarter_month"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent"
	            />
			
        	<TextView
        	    android:id="@+id/payment_lbl_month"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_month" 
		        />
			
			<Spinner 
	            android:id="@+id/payment_spn_month"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent"
	            />
			
			<TextView
		        android:id="@+id/payment_lbl_day"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_day" 
		        />
			
			<Spinner 
	            android:id="@+id/payment_spn_day"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent"
	            />
			
			<TextView
			    android:id="@+id/payment_lbl_day_of_week"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_day_of_week" 
		        />
			
			<Spinner 
	            android:id="@+id/payment_spn_day_of_week"
	            android:layout_height="wrap_content"
	            android:layout_width="match_parent"
	            />
			
			<TextView
			    android:id="@+id/payment_lbl_dates"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_dates" 
		        />
		       
			<EditText 
		    	android:id="@+id/payment_edt_dates"
		       	android:layout_height="wrap_content"
		       	android:minHeight="35dp"
		       	android:layout_width="match_parent"
		       	android:singleLine="false"
		       	android:textSize="16sp"
		       	android:text="@string/payment_default_dates"
		       />
			
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_hour" 
		        />
		       
			<EditText 
		    	android:id="@+id/payment_edt_hour"
		       	android:layout_height="35dp"
		       	android:layout_width="match_parent"
		       	android:textSize="16sp"
		       	android:inputType="number"
		       />
			
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/payment_lbl_minute" 
		        />
		       
			<EditText 
		    	android:id="@+id/payment_edt_minute"
		       	android:layout_height="35dp"
		       	android:layout_width="match_parent"
		       	android:textSize="16sp"
		       	android:inputType="number"
		       />
										        
	    </LinearLayout>
	    
	    <Button 
	        android:id="@+id/payment_btn_pay"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
            android:layout_marginBottom="15dp"
	       	android:text="@string/payment_btn_pay"
	        />

		<Button
			android:id="@+id/payment_btn_pay_nfc"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginBottom="15dp"
			android:text="@string/payment_btn_pay_nfc"
			/>

		<Button
			android:id="@+id/payment_btn_fiscal"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginBottom="15dp"
			android:text="@string/payment_btn_fiscal"
			/>

		<Button
			android:id="@+id/payment_btn_pay_background"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:text="@string/payment_btn_pay_background"
			/>
	</LinearLayout>
</ScrollView>