<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:scrollbarStyle="outsideOverlay"
    android:fadeScrollbars="false"
	>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:background="#000000"
		>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_operation"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_operation"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_state"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_state"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_id"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_id"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_invoice"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_invoice"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_appcode"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_appcode"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_terminal"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_terminal"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_iin"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_iin"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_pan"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_pan"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_emv"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_emv"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			android:singleLine="false"
			/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="#ffffff"
			android:text="@string/tr_details_dlg_lbl_signature"
			/>

		<TextView
			android:id="@+id/tr_details_dlg_lbl_signature"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textColor="#aaaaaa"
			/>

		<Button
			android:id="@+id/tr_details_dlg_btn_adjust"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_marginTop="10dp"
			android:text="@string/tr_details_btn_adjust"
			/>

	</LinearLayout>

</ScrollView>

    