<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="250dp"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/reverse_dlg_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reverse_dlg_lbl_amount"
            />
        <EditText
            android:id="@+id/reverse_dlg_edt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            android:hint="0"
            />
    </LinearLayout>

    <Button
        android:id="@+id/reverse_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        />

</LinearLayout>